[gd_scene load_steps=29 format=2]

[ext_resource path="res://Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenery/Rain.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenery/SilverSpires.png" type="Texture" id=3]
[ext_resource path="res://Scenery/Fog.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/ShippingContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenery/BackgroundBuilding.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenery/trolley.png" type="Texture" id=7]
[ext_resource path="res://Scenery/Door2.tscn" type="PackedScene" id=8]
[ext_resource path="res://BGMusic/Cyberpunk_Jam_-_Nightfall.ogg" type="AudioStream" id=9]
[ext_resource path="res://BGMusic/Cyberpunk_Jam_-_Rain__City_SFX.ogg" type="AudioStream" id=10]
[ext_resource path="res://Levels/iRealRenderer.tscn" type="PackedScene" id=11]
[ext_resource path="res://NPCs/Enemies/NPC.tscn" type="PackedScene" id=12]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.397516, 0.729814, 0.78882, 0.956522 )
colors = PoolColorArray( 0.359497, 0, 0.371094, 1, 0.535156, 0.535156, 0.535156, 1, 0.545098, 0.533333, 0.517647, 1, 0.5, 0.199219, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2387.5, 93.431 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2003.54, 10 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.00903614, 0.0301205 )
colors = PoolColorArray( 0.351563, 0.351563, 0.351563, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 53.7192, 431.366 )

[sub_resource type="Animation" id=8]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Audio/LockedNoise:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InteractionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.341176, 0, 0, 1 ), Color( 0.176471, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20, 14 ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("InteractionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=12]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 7 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 14, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Audio/OpenNoise:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=16]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 14 ]
}

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )
starting_cutscene = "HQ1"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="Far" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
motion_scale = Vector2( 0.5, 1 )

[node name="Rain" parent="CanvasLayer/ParallaxBackground/Far" instance=ExtResource( 2 )]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1491.83, 370.318 )
scale = Vector2( 1.75322, 2.33408 )

[node name="SilverSpires" type="Sprite" parent="CanvasLayer/ParallaxBackground/Far"]
visible = false
position = Vector2( 1486.74, 46.4608 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 3260, 982 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ParallaxBackground/Far"]
margin_left = -3285.03
margin_top = -1810.64
margin_right = -1237.03
margin_bottom = -1770.64
rect_rotation = 89.9999
rect_scale = Vector2( 0.879939, -163.133 )
texture = SubResource( 2 )
expand = true
stretch_mode = 1

[node name="Horizon_Marker" type="Position2D" parent="CanvasLayer/ParallaxBackground/Far"]

[node name="Med" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
modulate = Color( 0.709804, 0.709804, 0.709804, 1 )
motion_scale = Vector2( 0.75, 1 )

[node name="Horizon_Marker" type="Position2D" parent="CanvasLayer/ParallaxBackground/Med"]

[node name="Near" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]

[node name="Horizon_Marker" type="Position2D" parent="CanvasLayer/ParallaxBackground/Near"]

[node name="Fog" parent="CanvasLayer/ParallaxBackground" instance=ExtResource( 4 )]
position = Vector2( -17.2441, -51.7329 )

[node name="ResetZone" type="Node2D" parent="."]
position = Vector2( 5.0304, 3.54468 )

[node name="ResetArea" type="Area2D" parent="ResetZone"]
position = Vector2( -5.84534, 243.118 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetZone/ResetArea"]
shape = SubResource( 3 )

[node name="Floors" type="Node2D" parent="."]

[node name="Floor1" type="StaticBody2D" parent="Floors" groups=[
"platform",
"ground_plane",
]]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors/Floor1"]
shape = SubResource( 4 )

[node name="ColorRect" type="TextureRect" parent="Floors/Floor1"]
margin_left = -3299.7
margin_top = -16.3994
margin_right = -3245.7
margin_bottom = 23.6006
rect_rotation = 89.9999
rect_scale = Vector2( 25.0013, -163.055 )
texture = SubResource( 6 )
expand = true

[node name="Crates" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -1189.85, -517.327 )

[node name="ShippingContainer1" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( -16.6784, -261.455 )

[node name="ShippingContainer13" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( -65.1611, 360.72 )

[node name="ShippingContainer14" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( -71.2907, 203.119 )

[node name="ShippingContainer15" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( -36.9048, 48.158 )

[node name="ShippingContainer16" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( -56.0835, -108.529 )

[node name="ShippingContainer2" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 873.9, 359.991 )

[node name="ShippingContainer3" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 890.029, 202.434 )

[node name="ShippingContainer4" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 878.35, 46.6571 )

[node name="ShippingContainer5" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 984.619, -109.115 )

[node name="ShippingContainer6" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 1816.48, 359.336 )

[node name="ShippingContainer7" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 1862.76, 201.522 )

[node name="ShippingContainer8" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 1878.76, 47.1524 )

[node name="ShippingContainer9" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 1820.13, -109.403 )

[node name="ShippingContainer10" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 1374.48, -266.156 )

[node name="ShippingContainer17" parent="Crates" instance=ExtResource( 5 )]
visible = false
position = Vector2( 1364.99, -107.718 )

[node name="ShippingContainer11" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 1380.29, -422.182 )

[node name="ShippingContainer12" parent="Crates" instance=ExtResource( 5 )]
position = Vector2( 1398.15, -579.474 )

[node name="Walls" type="Node2D" parent="."]
position = Vector2( 1.40649, -0.0895996 )

[node name="WallLeft" type="StaticBody2D" parent="Walls"]
position = Vector2( -1972.87, -423.449 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
shape = SubResource( 7 )

[node name="BackgroundBuilding" parent="Walls/WallLeft" instance=ExtResource( 6 )]
position = Vector2( -278.513, 429.962 )
scale = Vector2( 3.93412, 3.93412 )
frame = 3
randomize_building = false

[node name="WallRight" type="StaticBody2D" parent="Walls"]
position = Vector2( 2110.06, -431.252 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRight"]
shape = SubResource( 7 )

[node name="BackgroundBuilding2" parent="Walls/WallRight" instance=ExtResource( 6 )]
position = Vector2( 407.954, 432.719 )
scale = Vector2( 3.93412, 3.93412 )
frame = 3
randomize_building = false

[node name="Scenery" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -922.567, -525.949 )

[node name="Trolley" type="Sprite" parent="Scenery"]
self_modulate = Color( 0.705882, 0.32549, 0.760784, 1 )
position = Vector2( 2662.75, 468.302 )
rotation = -0.00872665
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="InteractiveObjects" type="Node2D" parent="."]
position = Vector2( -1554.19, -520.942 )

[node name="HealthDoor" parent="InteractiveObjects" instance=ExtResource( 8 )]
position = Vector2( 131.153, -0.518948 )

[node name="AmmoDoor" parent="InteractiveObjects" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( -239.901, 468.643 )
door_type = 0

[node name="SceneChangeDoor" parent="InteractiveObjects" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 2518.93, 480.027 )
door_type = 2
scene_name = "RichQuarter"

[node name="CutsceneDoor" parent="InteractiveObjects" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 1822.57, 476.035 )
door_type = 3
scene_name = "FemmeFatale"
locked = true

[node name="Elevator1" parent="InteractiveObjects" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 1427.55, 473.547 )
door_type = 4
linkedElevatorName = "Elevator2"

[node name="Elevator2" parent="InteractiveObjects" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 1484.26, -475.229 )
door_type = 4
linkedElevatorName = "Elevator1"

[node name="AnimationPlayer" parent="InteractiveObjects/Elevator2" index="2"]
anims/access_denied = SubResource( 8 )
anims/close = SubResource( 9 )
anims/hide = SubResource( 10 )
anims/interact_old = SubResource( 11 )
anims/lock = SubResource( 12 )
anims/open = SubResource( 13 )
anims/reveal = SubResource( 14 )
anims/show = SubResource( 15 )
anims/unlock = SubResource( 16 )

[node name="Collectibles" type="Node2D" parent="."]
position = Vector2( -8.62207, -94.8433 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( -1873.58, -41.134 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -9.0
autoplay = true
bus = "Music"

[node name="BGSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
autoplay = true
bus = "SFX"

[node name="iRealRenderer" parent="." instance=ExtResource( 11 )]

[node name="ForegroundLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ParallaxForeground" type="ParallaxBackground" parent="ForegroundLayer"]
layer = 2

[node name="Front" type="ParallaxLayer" parent="ForegroundLayer/ParallaxForeground"]
position = Vector2( -1099.76, -510.035 )
z_index = 5
motion_scale = Vector2( 1.25, 1 )

[node name="Instructions" type="Node2D" parent="ForegroundLayer/ParallaxForeground/Front"]

[node name="Intro" type="Label" parent="ForegroundLayer/ParallaxForeground/Front/Instructions"]
margin_left = -697.505
margin_top = 404.779
margin_right = -423.505
margin_bottom = 435.779
text = "My name is Mick.
I hunt ghosts and sinners."
align = 1

[node name="HiddenDoors" type="Label" parent="ForegroundLayer/ParallaxForeground/Front/Instructions"]
margin_left = -164.09
margin_top = -82.7094
margin_right = 138.91
margin_bottom = -51.7094
text = "I have a scanner to check their identity.
(Press Q to use your \"Scan\" ability.)"
align = 1

[node name="PlatformSwitching" type="Label" parent="ForegroundLayer/ParallaxForeground/Front/Instructions"]
margin_left = -263.871
margin_top = 423.294
margin_right = 39.1288
margin_bottom = 454.294
text = "I climb the stacks to find them where they live.
(Press up or down while stationary)"
align = 1

[node name="Ghosts" type="Label" parent="ForegroundLayer/ParallaxForeground/Front/Instructions"]
margin_left = 171.999
margin_top = 351.999
margin_right = 409.999
margin_bottom = 416.999
text = "Some people are \"Ghosts\". 
Living off-grid with no digital identity.
That's identity fraud, and it's a felony.
(Scan people to check ID)"
align = 1

[node name="Citizens" type="Label" parent="ForegroundLayer/ParallaxForeground/Front/Instructions"]
margin_left = -60.1435
margin_top = 213.875
margin_right = 177.856
margin_bottom = 278.875
text = "Most people are Citizens. 
They pose no threat.
"
align = 1

[node name="Avatars" type="Label" parent="ForegroundLayer/ParallaxForeground/Front/Instructions"]
margin_left = 498.197
margin_top = 357.749
margin_right = 751.197
margin_bottom = 422.749
text = "Robots posing as human are Sinners.
Sinning is also a felony. Scan everyone.

Press F to use your weapon."
align = 1

[node name="LockedDoors" type="Label" parent="ForegroundLayer/ParallaxForeground/Front/Instructions"]
margin_left = 1295.67
margin_top = 212.023
margin_right = 1483.67
margin_bottom = 243.023
text = "Some doors are locked.
Find keys to unlock them."

[node name="NPCs" type="Node2D" parent="."]

[node name="Citizens" type="Node2D" parent="NPCs"]
editor/display_folded = true

[node name="NPC" parent="NPCs/Citizens" instance=ExtResource( 12 )]
position = Vector2( -1380.66, -67.5186 )

[node name="NPC2" parent="NPCs/Citizens" instance=ExtResource( 12 )]
position = Vector2( -869.435, -67.5186 )

[node name="NPC3" parent="NPCs/Citizens" instance=ExtResource( 12 )]
position = Vector2( -1105.73, -72.0626 )

[node name="NPC4" parent="NPCs/Citizens" instance=ExtResource( 12 )]
position = Vector2( -474.086, -72.0626 )

[node name="NPC5" parent="NPCs/Citizens" instance=ExtResource( 12 )]
position = Vector2( 487.944, -66.5666 )

[node name="NPC6" parent="NPCs/Citizens" instance=ExtResource( 12 )]
position = Vector2( 595.184, -65.1296 )

[node name="NPC7" parent="NPCs/Citizens" instance=ExtResource( 12 )]
position = Vector2( 1024.85, -65.0196 )

[node name="Enemies" type="Node2D" parent="NPCs"]
editor/display_folded = true

[node name="NPC" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( -1204.32, -710.972 )

[node name="NPC3" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( -637.068, -61.0709 )
character_type = 2
scanned_attitude = 1

[node name="NPC4" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( -1289.87, -382.483 )

[node name="NPC2" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( -49.7512, -64.9089 )
character_type = 1
scanned_attitude = 1

[node name="NPC5" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( -321.798, -391.718 )
character_type = 1
initial_attitude = 1
scanned_attitude = 1

[node name="NPC6" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( 631.809, -59.7439 )
character_type = 1
scanned_attitude = 1

[node name="NPC7" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( 1125.91, -59.2079 )
character_type = 2
scanned_attitude = 1

[node name="NPC8" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( 1641.34, -59.1139 )
character_type = 2
initial_attitude = 1
scanned_attitude = 1

[node name="NPC9" parent="NPCs/Enemies" instance=ExtResource( 12 )]
position = Vector2( 490.119, -399.726 )
character_type = 2
scanned_attitude = 1
[connection signal="body_entered" from="ResetZone/ResetArea" to="." method="_on_ResetArea_body_entered"]

[editable path="InteractiveObjects/Elevator2"]
